perf: 시청 페이지 추천 후보를 SQL에서 1차 필터링 — 전체 공개영상 덤프 제거
getRelatedVideos가 findAllPublic()으로 전체 공개 영상을 메모리에 올려
점수를 매기던 것을, 후보를 SQL에서 좁혀 최대 size*4건만 다루도록 전환.

- VideoRepository: findRelatedByCategory / findRelatedByOwner /
  findPopularPublicExcluding 3개 쿼리 추가 (base·비공개 제외, 정렬 포함)
- VideoService.getRelatedVideos: 같은 채널 + 같은 카테고리 인기순 +
  인기순 폴백을 LinkedHashMap으로 dedup한 후보 풀에만 점수 계산.
  recommended/channel 반환 계약은 유지
- 서비스 테스트 3개를 새 쿼리 목킹으로 갱신, 리포지토리 슬라이스
  테스트 3개 추가 (H2에서 정렬·비공개 제외 검증)

PR #10 후속: 전체 영상 덤프 의존이 클라→서버로 옮겨졌던 것을 마저 제거.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>